[tool.poetry]
name = "url_shortner"
version = "0.1.0"
description = ""
authors = ["Myleshen Praburam <mylesuge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
pymongo = "^3.11.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
