[tool.poetry]
name = "url_shortner"
version = "0.1.0"
description = ""
authors = ["Myleshen Praburam <mylesuge@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.0"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
pymongo = "^3.11.0"
gunicorn = "^20.0.4"
setuptools = "^50.3.2"
dnspython = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.20.1"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"